Remove duplicate script tag in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-    <script type='text/javascript' src='//pl27557766.revenuecpmgate.com/42/30/0f/42300f89f8d233c68b7bd3536edccdae.js'></script>
+    <script type='text/javascript' src='//pl27849247.effectivegatecpm.com/cb/f6/5f/cbf65f5fd1c47085ab8da2a39a5d091d.js'></script>
     <script type='text/javascript' src='//pl27557766.revenuecpmgate.com/42/30/0f/42300f89f8d233c68b7bd3536edccdae.js'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
